--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
-
+    compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'org.jsoup:jsoup:1.8.3'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
