--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-
+    compile 'me.relex:circleindicator:1.2.2@aar'
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 
 }
