--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 
+    compile 'com.android.support:support-v4:25.3.1'
 }
