--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.ArticleNewsActivity"></activity>
-        <activity android:name=".ui.activity.ArticleVideoActivity"></activity>
-
+        <activity android:name=".ui.activity.VideoActivity"></activity>
     </application>
 
 </manifest>
