--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,9 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 
+    compile 'eu.long1:spacetablayout:1.0.4'
+
+
+
     compile 'com.android.support:support-v4:25.3.1'
 }
