--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.devfill.liganet"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 3
-        versionName "1.2"
+        versionCode 5
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,4 +42,5 @@ dependencies {
 
 
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
