--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+    compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
 }
