--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'com.android.application'
             applicationId "com.devfill.liganet"
             minSdkVersion 17
             targetSdkVersion 25
-            versionCode 9
-            versionName "1.9"
+            versionCode 11
+            versionName "2.1"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         }
         buildTypes {
@@ -17,6 +17,11 @@ apply plugin: 'com.android.application'
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
         }
+
+        lintOptions {
+                checkReleaseBuilds false
+            }
+
     }
 
     dependencies {
@@ -40,9 +45,16 @@ apply plugin: 'com.android.application'
 
         compile files('libs/YouTubeAndroidPlayerApi.jar')
 
-
         compile 'com.android.support:support-v4:25.3.1'
         compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 
         compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
-}
+
+        compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+
+
+        // rxjava
+        compile 'io.reactivex.rxjava2:rxjava:2.0.2'
+        compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+        compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    }
